[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/EditorsElements/DialogEditor/EditUiBlocks/MoodEditBlock.gd" type="Script" id=1]
[ext_resource path="res://UI/ScrollablePopupMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/EditorsElements/DialogEditor/MoodShower.tscn" type="PackedScene" id=3]

[node name="MoodEditBlock" type="VBoxContainer"]
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="Pickers" type="GridContainer" parent="."]
margin_right = 148.0
margin_bottom = 96.0
size_flags_horizontal = 3
columns = 2

[node name="Label" type="Label" parent="Pickers"]
margin_top = 3.0
margin_right = 44.0
margin_bottom = 18.0
text = "Person:"
uppercase = true

[node name="PersonPicker" parent="Pickers" instance=ExtResource( 2 )]
margin_left = 48.0
margin_right = 148.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Pickers"]
margin_top = 28.0
margin_right = 44.0
margin_bottom = 43.0
text = "Mood:"
uppercase = true

[node name="MoodPicker" parent="Pickers" instance=ExtResource( 2 )]
margin_left = 48.0
margin_top = 25.0
margin_right = 148.0
margin_bottom = 46.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="Pickers"]
margin_top = 53.0
margin_right = 44.0
margin_bottom = 68.0
text = "Group:"
uppercase = true

[node name="MoodGroupPicker" parent="Pickers" instance=ExtResource( 2 )]
margin_left = 48.0
margin_top = 50.0
margin_right = 148.0
margin_bottom = 71.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="Pickers"]
margin_top = 78.0
margin_right = 44.0
margin_bottom = 93.0
text = "Align:"
uppercase = true

[node name="AlignPicker" parent="Pickers" instance=ExtResource( 2 )]
margin_left = 48.0
margin_top = 75.0
margin_right = 148.0
margin_bottom = 96.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 100.0
margin_right = 148.0
margin_bottom = 104.0

[node name="MoodShower" parent="." instance=ExtResource( 3 )]

[connection signal="item_selected" from="Pickers/PersonPicker" to="." method="_on_PersonPicker_item_selected"]
[connection signal="item_selected" from="Pickers/MoodPicker" to="." method="_on_MoodPicker_item_selected"]
[connection signal="item_selected" from="Pickers/MoodGroupPicker" to="." method="_on_MoodGroupPicker_item_selected"]
[connection signal="item_selected" from="Pickers/AlignPicker" to="." method="_on_AlignPicker_item_selected"]
